# delayed-speech-synthesis

./: .gitmodules  LICENSE  README.md  baseline_offline.py  decode_online.py  development_amplifier.py  prepare_corpus.py  replicate.sh  requirements.txt  train_bidirectional_model.py  train_unidirectional_vad.py
config/: debug_settings.ini
eval/: figure_1_assets.py  figure_2ab.py  suppl_fig_2.py
eval/contamination/: aggregate_per_day.py  data_preparation.m  gen_contamination_report.py  run_contamination_analysis.m
extensions/hga/: hga_optimized.pyx  pyproject.toml  setup.py
extensions/lpcnet/: LPCNet.pyx  cLPCNet.pxd  pyproject.toml  setup.py
local/: common.py  models.py  training.py  units.py
